# QGIS

.ci/travis/linux/: docker-build-test.sh
.docker/: qgis.dockerfile
.github/workflows/: build-docker.yml  build-macos-qt6.yml  code_layout.yml  macos-build.yml  mingw64.yml  ogc.yml  pr-needs-documentation.yml  run-tests.yml  stale.yml
images/: images.qrc
python/3d/auto_generated/: qgs3dmapcanvas.sip.in  qgs3dmapsettings.sip.in  qgspointcloudlayer3drenderer.sip.in
python/PyQt6/3d/: 3d_auto.sip
python/core/auto_generated/: qgsvectorlayer.sip.in  qgsvectorlayereditutils.sip.in
python/gui/auto_generated/: qgisinterface.sip.in
resources/: CMakeLists.txt
src/3d/: qgs3dmapcanvas.h  qgs3dmapscene.cpp  qgs3dmapsettings.cpp  qgs3dmapsettings.h  qgs3dutils.h  qgspointcloudlayer3drenderer.cpp  qgspointcloudlayer3drenderer.h  qgspointcloudlayerchunkloader_p.cpp  qgsrulebasedchunkloader_p.cpp  qgstilingscheme.h  qgsvectorlayerchunkloader_p.cpp  qgsvirtualpointcloudentity_p.cpp  qgsvirtualpointcloudentity_p.h
src/3d/symbols/: qgspointcloud3dsymbol.cpp  qgspointcloud3dsymbol.h  qgspointcloud3dsymbol_p.cpp
src/3d/terrain/: qgsdemterraingenerator.cpp  qgsdemterraingenerator.h  qgsdemterraintileloader_p.cpp  qgsflatterraingenerator.cpp  qgsflatterraingenerator.h  qgsterraintexturegenerator_p.cpp  qgsterraintileloader_p.cpp
src/app/: CMakeLists.txt  qgisapp.cpp  qgisapp.h  qgisappinterface.cpp  qgisappinterface.h  qgsdoomengine.cpp  qgsdoomengine.h  qgsdoomlayer.cpp  qgsdoomlayer.h  qgsmapthemes.cpp  qgsmaptoolsplitfeatures.cpp  qgsstatusbarcoordinateswidget.cpp  qgsstatusbarcoordinateswidget.h
src/app/3d/: qgs3dmapconfigwidget.cpp  qgspointcloud3dsymbolwidget.cpp  qgspointcloud3dsymbolwidget.h  qgspointcloudlayer3drendererwidget.cpp
src/app/vertextool/: qgsvertextool.cpp  (+1 more)
src/auth/: CMakeLists.txt
src/auth/azure_sas/: CMakeLists.txt
src/auth/azure_sas/core/: qgsauthazuresasmethod.cpp  qgsauthazuresasmethod.h
src/auth/azure_sas/gui/: qgsauthazuresasedit.cpp  qgsauthazuresasedit.h  qgsauthazuresasedit.ui
src/core/: CMakeLists.txt  qgsvectorlayer.cpp  qgsvectorlayer.h  qgsvectorlayereditutils.cpp  qgsvectorlayereditutils.h
src/gui/: qgisinterface.h
src/ui/: qgisapp.ui
(+87 files in other folders)
